# hunter_bipedal_control

./: .gitignore  LICENSE  README.md  index.html
lcm_msg/: CMakeLists.txt  package.xml
lcm_msg/include/: fullstate_lcmt.lcm  lowcmd_lcmt.lcm  lowstate_lcmt.lcm
legged_common/: CMakeLists.txt  package.xml
legged_common/scripts/: generate_urdf.sh
legged_control/: CMakeLists.txt  package.xml
legged_controllers/: CMakeLists.txt  legged_controllers_plugins.xml  package.xml
legged_controllers/cfg/: Tutorials.cfg
legged_controllers/config/: controllers.yaml  joy.yaml
legged_controllers/config/hunter/: gait.info  reference.info  task.info
legged_controllers/include/legged_controllers/: LeggedController.h  SafetyChecker.h  TargetTrajectoriesPublisher.h  utilities.h
legged_controllers/include/legged_controllers/visualization/: LeggedSelfCollisionVisualization.h
legged_controllers/launch/: joy_teleop.launch  one_start.launch  one_start_gazebo.launch  one_start_mujoco.launch  one_start_real.launch
legged_controllers/rviz/: legged_robot.rviz
legged_controllers/scripts/: timedelay_launch.sh
legged_controllers/src/: LeggedController.cpp  TargetTrajectoriesPublisher.cpp  utilities.cpp
legged_estimation/: CMakeLists.txt  package.xml
legged_estimation/include/legged_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
legged_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
legged_examples/legged_bridge/legged_bridge_hw/: CMakeLists.txt  package.xml
legged_examples/legged_bridge/legged_bridge_hw/app/: CMakeLists.txt  README.MD  command.cpp  command.h  config.h  main.cpp  math_ops.c  math_ops.h  motor_control.c  motor_control.h  queue.h  transmit.cpp  transmit.h
legged_examples/legged_bridge/legged_bridge_hw/config/: hunter.yaml
legged_examples/legged_bridge/legged_bridge_hw/include/legged_bridge_hw/: BridgeHW.h
legged_examples/legged_bridge/legged_bridge_hw/launch/: legged_bridge_hw.launch
legged_examples/legged_bridge/legged_bridge_hw/src/: BridgeHW.cpp  legged_bridge_hw.cpp
legged_examples/legged_hunter/legged_hunter_description/: CMakeLists.txt  package.xml
legged_examples/legged_hunter/legged_hunter_description/launch/: display.launch  empty_world.launch
legged_examples/legged_hunter/legged_hunter_description/meshes/: leg_l1_link.STL  leg_l5_link.STL
legged_examples/legged_hunter/legged_hunter_description/rviz/: urdf.rviz
legged_examples/legged_hunter/legged_hunter_description/urdf/: hunter.urdf  hunter_sim.urdf
legged_examples/legged_mujoco/: CMakeLists.txt  package.xml
legged_examples/legged_mujoco/config/: hunter.yaml
legged_examples/legged_mujoco/include/legged_mujoco/: LeggedMujocoSim.h
legged_examples/legged_mujoco/include/mujoco_lcm/: MujocoLcm.h
legged_examples/legged_mujoco/launch/: legged_mujoco_sim.launch
legged_examples/legged_mujoco/src/: LeggedMujocoSim.cpp  legged_mojuco_sim.cpp
legged_examples/legged_mujoco/src/mujoco_lcm/: MujocoLcm.cpp
legged_gazebo/: CMakeLists.txt  legged_hw_sim_plugins.xml  package.xml
legged_gazebo/config/: default.yaml
legged_gazebo/include/legged_gazebo/: LeggedHWSim.h
legged_gazebo/launch/: empty_world.launch
legged_gazebo/src/: LeggedHWSim.cpp
legged_gazebo/worlds/: empty_world.world
legged_hw/: CMakeLists.txt  package.xml
legged_hw/include/legged_hw/: LeggedHW.h  LeggedHWLoop.h
legged_hw/src/: LeggedHW.cpp  LeggedHWLoop.cpp
legged_interface/: CMakeLists.txt  package.xml
legged_interface/include/legged_interface/: LeggedInterface.h  LeggedRobotPreComputation.h  SwitchedModelReferenceManager.h
legged_interface/include/legged_interface/common/: ModelSettings.h  Types.h  utils.h
legged_interface/include/legged_interface/constraint/: EndEffectorLinearConstraint.h  FrictionConeConstraint.h  LeggedSelfCollisionConstraint.h  NormalVelocityConstraintCppAd.h  XYLimitConstraint.h  XYReferenceConstraintCppAd.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
legged_interface/include/legged_interface/cost/: LeggedRobotQuadraticTrackingCost.h
legged_interface/include/legged_interface/dynamics/: LeggedRobotDynamicsAD.h
legged_interface/include/legged_interface/foot_planner/: CubicSpline.h  InverseKinematics.h  MultiCubicSpline.h  SplineCpg.h  SwingTrajectoryPlanner.h
legged_interface/include/legged_interface/gait/: Gait.h  GaitSchedule.h  LegLogic.h  ModeSequenceTemplate.h  MotionPhaseDefinition.h
legged_interface/include/legged_interface/initialization/: LeggedRobotInitializer.h
legged_interface/include/legged_interface/visualization/: LeggedRobotVisualizer.h
legged_interface/launch/: legged_robot_sqp.launch
legged_interface/src/: LeggedInterface.cpp  LeggedRobotPreComputation.cpp  SwitchedModelReferenceManager.cpp
legged_interface/src/common/: ModelSettings.cpp
legged_interface/src/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  XYLimitConstraint.cpp  XYReferenceConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
legged_interface/src/constraint/design_tools/: relaxedBarrierPenaltyVis.py
legged_interface/src/dynamics/: LeggedRobotDynamicsAD.cpp
legged_interface/src/foot_planner/: CubicSpline.cpp  InverseKinematics.cpp  MultiCubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
legged_interface/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
legged_interface/src/initialization/: LeggedRobotInitializer.cpp
legged_interface/src/test/: LeggedRobotDummyNode.cpp  LeggedRobotSqpMpcNode.cpp
legged_interface/src/visualization/: LeggedRobotVisualizer.cpp
legged_wbc/: CMakeLists.txt  package.xml
legged_wbc/include/legged_wbc/: HierarchicalWbc.h  HoQp.h  Task.h  WbcBase.h  WeightedWbc.h
legged_wbc/src/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
legged_wbc/test/: HoQp_test.cpp
mujoco/: CMakeLists.txt  package.xml
mujoco/launch/: mujoco_sim.launch
mujoco/lib/: libmujoco.so.3.0.1
qpoases_catkin/: CMakeLists.txt  package.xml
(+20 files in other folders)
