<?xml version="1.0"?>
<package format="2">
    <name>legged_control</name>
    <version>0.0.0</version>
    <description>Meta package that contains package of legged.</description>
    <maintainer email="contact@bridgedp.com">bridgedp</maintainer>

    <license>MIT</license>

    <url type="repository">https://github.com/bridgedp/hunter_bipedal_control</url>
    <url type="bugtracker">https://github.com/bridgedp/hunter_bipedal_control/issues</url>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
        <metapackage/>
    </export>
</package>




