<?xml version="1.0"?>
<package format="2">
    <name>legged_interface</name>
    <version>0.0.0</version>
    <description>Legged interface base on OCS2</description>
    <maintainer email="contact@bridgedp.com">bridgedp</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>ocs2_legged_robot</depend>
    <depend>ocs2_legged_robot_ros</depend>
    <depend>ocs2_self_collision</depend>
    <depend>ocs2_ros_interfaces</depend>
    <depend>legged_common</depend>
    <depend>pinocchio</depend>
    
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>message_runtime</depend>

</package>
